fix color contrast issues

--- a/app/styles/pages/_releases.scss
+++ b/app/styles/pages/_releases.scss
@@ -437,7 +437,6 @@ hr {
   text-decoration: none;
   line-height: 1.5em;
   border-bottom: none;
-  color: #d84a32;
   font-weight: 700;
   cursor: pointer
 }
@@ -527,7 +526,7 @@ hr {
   padding: 6px 1em;
   display: block;
   text-transform: none;
-  color: #d84a32
+  color: #443331;
 }
 
 #sidebar ol#toc-list li.level-2 a:hover, #sidebar ol#toc-list li.level-3 a:hover {
